# comparator

./: CMakeLists.txt  README.md
include/: curl_handler.h  dataset.h  helpers.h  parquet_handler.h  response_parser.h  scorer.h
src/: curl_handler.cpp  dataset.cpp  main.cpp  parquet_handler.cpp  response_parser.cpp  scorer.cpp
tests/: test_curl_handler.cpp  test_dataset.cpp  test_parquet_handler.cpp  test_response_parser.cpp  test_scoring.cpp
